--- a/invillia-Security/src/main/resources/application-prod.properties
+++ b/invillia-Security/src/main/resources/application-prod.properties
@@ -28,6 +28,6 @@ server.port = 7000
 #----------------------------------------------------------
 # ~  Security
 #----------------------------------------------------------
-opttm.jwt.secret=@acme>*#*Y13EioR0
+acme.jwt.secret=@acme>*#*Y13EioR0
 #20 min
-opttm.jwt.expiration=1200000
+acme.jwt.expiration=1200000
